in ads details screen fix text to RTL remove gaps from header
https://trello.com/c/sF5hLiU7/42-in-ads-details-screen-fix-text-to-rtl-remove-gaps-from-header

--- a/public/css/custom_rtl_css.css
+++ b/public/css/custom_rtl_css.css
@@ -1,8 +1,17 @@
 html{
     direction:rtl;
+    text-align: right !important;
     font-family:"Droid Arabic Kufi", "Droid Sans", sans-serif;
     font-size:14px;
 }
+
+body{
+    direction:rtl;
+    text-align: right !important;
+    font-family:"Droid Arabic Kufi", "Droid Sans", sans-serif;
+    font-size:14px;
+}
+.inner-pages .blog .homes-content .homes-list li { float:right !important;}
 /*
 /*
 */
